test/Fail/Issue1145.err
Issue1145.agda:8,3-3
Issue1145.agda:8,3: Parse error
Bad<ERROR>
 : Set                      --...
